2013-10-03  Andy Buckley  <andy.buckley@cern.ch>

	* src/LHAGlue.cc: Removing erroneous if "protection" blocks which
	broke PDF set re-initialisation.

2013-09-30  Andy Buckley  <andy.buckley@cern.ch>

	* Version 6.0.3 release.

2013-09-26  Andy Buckley  <andy.buckley@cern.ch>

	* Fixing and extending Cython wrappers for Info and subclasses.

	* Adding print() and dataversion() functions on PDF and PDFSet.

2013-09-25  Andy Buckley  <andy.buckley@cern.ch>

	* Adding machinery for migration of the MRST2004qed set to creategrids.

	* Many improvements to creategrids correctness, efficiency, etc.

2013-09-23  Andy Buckley  <andy.buckley@cern.ch>

	* Add mkPDFs<SMART_PTR> templated vector-filling functions and
	update the testpdfset example program.

	* Add the -avoid-version flag to libtool.

2013-09-22  Andy Buckley  <andy.buckley@cern.ch>

	* Change implementation of forced positivity to use an int value
	to allow for better caching and distinguishing between
	forced-positive and forced-positive-definite. The flag has been
	renamed to ForcePositive, to indicate that it triggers an action
	rather than just being some manually provided information about
	the PDF in question.

2013-09-06  James Ferrando <james.ferrando@cern.ch>

	* Modified PDFLIB comaptibility function to handle format of input arrays from POWHEG.

2013-09-03  Andy Buckley  <andy.buckley@cern.ch>

	* Fixed misnaming in the automatic rewriting of cteq6ll -> cteq6l1.

2013-08-30 Steve Lloyd <slloyd1990@gmail.com>

	* Added functionality for forcing a loaded GridPDF to return positive
	definite values through the flag "PositiveDefinite" in the set metadata.
	This is to prevent overshooting in to negative
	values when interpolating/extrapolating.  Updated creategrids script with a
	--force-pos-def flag to reflect this change.

2013-08-30  Andy Buckley  <andy.buckley@cern.ch>

	* Adding do-nothing overloadings of the 2-arg fallback version of